--- a/ff1177bcfc6f4d0a9cbbc4b859856f2b.html
+++ b/ff1177bcfc6f4d0a9cbbc4b859856f2b.html
@@ -19,7 +19,7 @@
   MicroMasters | edX Credentials
 </title>
 
-    <link rel="icon" type="image/x-icon" href="https://github.com/credentials-edx-org/credentials/blob/main/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="https://credentials-edx-org.github.io/credentials/favicon.ico" />
     <!-- import fontawesome svgs and icons -->
     <script src="https://prod-edx-credentials.edx-cdn.org/fontawesomefree/js/fontawesome.js"></script>
     <script src="https://prod-edx-credentials.edx-cdn.org/fontawesomefree/js/solid.js"></script>
